# python-project-50

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  coverage.xml  makefile  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml
gendiff/: __init__.py  cli.py  diff.py  parser.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: diff.py  gendiff.py
hexlet_code.egg-info/: PKG-INFO
tests/: test_diff.py
tests/test_data/: expected_json.txt
